@@ -1,3 +1,6 @@
+2009-05-04 Iuri Fernandes <iurifq@gmail.com>
+* Created foreign key for apartamento.
+
 2009-05-02 Iuri Fernandes <iurifq@gmail.com>
 * Modified createTables script to create TiposApartamentos. It's not working
 yet.
